<resources>
    <string name="app_name">Infantime</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="possible_diseases">Possible Diseases</string>
    <string name="location">Location</string>
    <string name="air_quality">Air quality</string>
    <string name="aqi_text">--</string>
    <string name="aqi_text_view">--</string>
    <string name="aqi_image">image_aqi</string>
    <string name="aqi_warning">loading data...</string>
    <string name="local_travel">Local travel</string>
    <string name="upcoming_trip">Upcoming trip</string>
    <string name="no_trip_found">No trip found....</string>
    <string name="trip_date">--</string>
    <string name="schedule_trip">Schedule trip</string>
    <string name="search_destination_suburb">Search destination / suburb:</string>
    <string name="current_aqi">Current AQI:</string>
    <string name="aqi__text">--</string>
    <string name="aqitext">--</string>
    <string name="todo">TODO</string>
    <string name="generate_checklist">Generate Checklist</string>
    <string name="type_of_places">Type of places:</string>
    <string name="input_suburb_name_in_vic">Input A Suburb Name In VIC</string>
    <string name="loading">Loading...</string>
    <string name="our_tips">Our Tips:</string>
    <string name="dosage_per_day">Dosage per day</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="input_name_of_medicine">Input The Name Of Medicine</string>
    <string name="enter_the_dosage">Input The Dosage</string>
    <string name="quantity_needed">Quantity Needed</string>
    <string name="please_input_dosage">Input The Dosage</string>
    <string name="save">Save</string>
    <string name="search_button">Search Button</string>
    <string name="loading_filler">--</string>
    <string name="travelling_to">Travelling to:</string>
    <string name="overseas_cities">Overseas cities</string>
    <string name="date_of_travel">Date of Travel:</string>
    <string name="click_to_select_date">Click to select date</string>
    <string name="mode_of_travel">Mode of Travel:</string>
    <string name="air">Air</string>
    <string name="boat">Boat</string>
    <string name="road">Road</string>
    <string name="check_medicine">Check Medicine</string>
    <string name="name_of_the_trip">Input A Trip Name</string>
    <string name="trip_name">Trip Name:</string>
    <string name="before">Before</string>
    <string name="during">During</string>
    <string name="after">After</string>
    <string name="medicine">Medicine</string>
    <string name="disease_common_name">Disease Common name</string>
    <string name="disease_info">Disease Info</string>
    <string name="you_may_find_symptoms_like">You may find symptoms like:</string>
    <string name="your_medicine_cabinet">Your medicine cabinet</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="medicine_stock_info">Medicine Stock Info</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="name_of_the_medicine">Name of the Medicine</string>
    <string name="stock_needed">Stock Needed</string>
    <string name="current_stock">Current Stock</string>
    <string name="filter_by_symptom">Filter by symptom:</string>
    <string name="no_domestic_trip_found">No Domestic Trip found.</string>
    <string name="add_domestic_trip">Add Domestic Trip</string>
    <string name="image_aqi">image_aqi</string>
    <string name="loading_data">loading data...</string>
    <string name="add_trip">Add trip</string>
    <string name="disease_science_name">Disease Science Name</string>
    <string name="activity_name">Activity Name</string>
    <string name="task_name">Task Name</string>
    <string name="purpose">Purpose</string>
    <string name="description">Description</string>
    <string name="description_text">Description Text</string>
    <string name="symptom">Symptom</string>
    <string name="facility_name">Facility Name</string>
    <string name="location_availability">Location Availability</string>
    <string name="arrow">Arrow</string>
    <string name="input_overseas_city_names">Input An Overseas City Name</string>
    <string name="cartoon_image_of_a_plane">Cartoon image of a plane</string>
    <string name="check_medicine_cabinet">Check Medicine Cabinet</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="current_humidity">Current Humidity</string>
    <string name="select_a_suburb">Select a suburb</string>
</resources>