<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddDomesticTripActivity">

    <TextView
        android:id="@+id/destinationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/search_destination_suburb"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteDestinationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationTextView"
        android:layout_alignStart="@id/destinationTextView"
        android:layout_toStartOf="@+id/searchButton"
        android:completionHint="Select a suburb"
        android:completionThreshold="1"
        android:hint="@string/select_a_suburb" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationTextView"
        android:layout_toEndOf="@+id/destinationTextView"
        android:contentDescription="@string/search_button"
        android:src="@drawable/ic_location_search" />

    <RelativeLayout
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/autoCompleteDestinationTextView"
        android:layout_marginTop="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/currentAQITitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/current_aqi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aqiLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/currentAQITitleTextView"
            android:layout_marginStart="20sp"
            android:layout_toEndOf="@id/currentAQITitleTextView"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/ourtip_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="50sp"
            android:text="@string/our_tips"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aqiWarningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ourtip_textview"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/currentTemperatureTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aqiWarningTextView"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:text="@string/current_temperature"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentTemperatureTitleTextView"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:text="@string/loading"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/humidityTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentTemperatureTextView"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:text="@string/current_humidity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/humidityTitleTextView"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:text="@string/loading"
            android:textSize="20sp" />

        <Button
            android:id="@+id/generateCheckListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentHumidityTextView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:text="@string/next"
            android:textColor="@color/black" />
    </RelativeLayout>

</RelativeLayout>