<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DomesticTravelChecklistActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tripNameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/trip_name"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10sp"/>

    <EditText
        android:id="@+id/tripNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tripNameTitleTextView"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:hint="@string/name_of_the_trip"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tripNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tripNameTitleTextView"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10sp"/>

    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/segmentedControlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tripNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        app:sbg_animateSelector="linearOutSlowIn"
        app:sbg_animateSelectorDuration="500"
        app:sbg_dividerColor="@color/colorPrimary"
        app:sbg_dividerSize="1dp"
        app:sbg_position="1"
        app:sbg_radius="2dp"
        app:sbg_ripple="true"
        app:sbg_rippleColor="@color/colorPrimary"
        app:sbg_selectorColor="@color/colorPrimary"
        app:sbg_selectorTextColor="#FFFFFF"
        app:sbg_shadow="true"
        app:sbg_shadowElevation="3dp"
        app:sbg_shadowMargin="4dp">

        <Button
            android:id="@+id/beforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/duringButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/during"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/afterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after"
            android:textColor="@color/colorPrimaryDark" />

    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tipsRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/saveButton"
        android:layout_below="@id/segmentedControlButton"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/viewMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/medicine"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"
        android:visibility="invisible"
        android:enabled="false"
        android:textColor="@color/black"/>


</RelativeLayout>